Fix: meditation pluggin restructuring
